--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,16 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 			<version>2.7.3</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+			<version>2.7.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
+			<version>5.7.3</version>
+		</dependency>
 	</dependencies>
 
 	<build>
